fix(tournaments): the top match card could be hard to see in some cases

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -108,6 +108,7 @@ station {
 
 .match-area {
   position: absolute;
+  padding-top: 20px;
 }
 
 .pull-right { float: right; }
